--- a/src/index.html
+++ b/src/index.html
@@ -74,19 +74,10 @@
     <div id="app">
       <div class="notloaded">
         <p>
-          DIM hasn't loaded. Something may be wrong with it, or with your browser (maybe you have a
-          content blocker, or have disabled JavaScript, or your browser is too old). Try force
-          reloading to make sure (Ctrl-F5 or ⌘-Shift-R).
-        </p>
-        <ul>
-          <li>
-            <a href="https://github.com/DestinyItemManager/DIM/wiki/Troubleshooting"
+          DIM failed to load. Please follow our <a href="https://github.com/DestinyItemManager/DIM/wiki/Troubleshooting"
               >Troubleshooting Guide</a
-            >
-          </li>
-          <li><a href="https://twitter.com/ThisIsDIM">@ThisIsDIM on Twitter</a></li>
-          <li><a href="https://mstdn.games/@ThisIsDIM">@ThisIsDIM on Mastodon</a></li>
-        </ul>
+            > to find a solution, and contact us if those steps don't work.
+        </p>
       </div>
     </div>
     <div id="temp-container"></div>
