--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
     <meta name="twitter:widgets:csp" content="on" />
 
@@ -74,9 +74,11 @@
     <div id="app">
       <div class="notloaded">
         <p>
-          DIM failed to load. Please follow our <a href="https://github.com/DestinyItemManager/DIM/wiki/Troubleshooting"
-              >Troubleshooting Guide</a
-            > to find a solution, and contact us if those steps don't work.
+          DIM failed to load. Please follow our
+          <a href="https://github.com/DestinyItemManager/DIM/wiki/Troubleshooting"
+            >Troubleshooting Guide</a
+          >
+          to find a solution, and contact us if those steps don't work.
         </p>
       </div>
     </div>
