--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
     <link rel="manifest" href="/manifest-webapp.json" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#434444" />
-    <meta name="theme-color" content="black" />
+    <meta name="theme-color" content="#202034" />
     <meta name="color-scheme" content="dark" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
