--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     </style>
   </head>
 
-  <body>
+  <body data-theme="theme-dark">
     <div id="app">
       <div class="notloaded">
         <p>
