Use a signed inline script for GA

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,8 @@
     </style>
   </head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=<%= analyticsProperty %>"></script>
+  <!-- prettier-ignore -->
+  <script><%= analyticsSetupScript %></script>
   <body>
     <div id="app">
       <div class="notloaded">
