Update google fonts code

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
     <meta name="twitter:widgets:csp" content="on" />
-
     <link href="https://fonts.googleapis.com" rel="preconnect" crossorigin />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link href="https://www.bungie.net" rel="preconnect" crossorigin />
     <link href="https://api.destinyitemmanager.com" rel="preconnect" crossorigin />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:200,400,700"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;400;700&display=swap"
       rel="stylesheet"
       type="text/css"
     />
