Add OpenGraph preview

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>DIM</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Swap items, check stats, and build the loadout to Become Legend with Destiny Item Manager."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Destiny Item Manager" />
+    <meta property="og:image" content="https://destinyitemmanager.com/images/inventory.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
