early error reports

--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,7 @@
           >
           to find a solution, and contact us if those steps don't work.
         </p>
+        <textarea id="errorreport"></textarea>
       </div>
     </div>
     <div id="temp-container"></div>
