no textarea, more info

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
           >
           to find a solution, and contact us if those steps don't work.
         </p>
-        <textarea id="errorreport"></textarea>
+        <pre id="errorreport"></pre>
       </div>
     </div>
     <div id="temp-container"></div>
