--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,11 @@
         }
       }
     </style>
+    <%= htmlWebpackPlugin.files.js
+    .sort((a,b)=>a.includes("earlyErrorReport")?-1:b.includes("earlyErrorReport")?1:0)
+    .map((p)=>`<script${p.includes("earlyErrorReport")?"":" defer"} src="${p}"></script>`).join("\n    ") %>
+    <%= htmlWebpackPlugin.files.css
+    .map((p)=>`<link href="${p}" rel="stylesheet">`).join("\n    ") %>
   </head>
   <body>
     <div id="app">
@@ -87,6 +92,7 @@
           >
           to find a solution, and contact us if those steps don't work.
         </p>
+        <pre id="errorreport"></pre>
       </div>
     </div>
     <div id="temp-container"></div>
