--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="<%= publicPath %>apple-touch-icon-6-2018.png" />
     <link rel="icon" type="image/png" href="<%= publicPath %>favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="<%= publicPath %>favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="<%= publicPath %>favicon.ico">
     <link rel="manifest" href="<%= publicPath %>manifest-webapp.json" />
     <link rel="mask-icon" href="<%= publicPath %>safari-pinned-tab.svg" color="#434444" />
     <meta name="theme-color" content="#202034" />
