--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
       <div class="notloaded">
         <p>
           DIM failed to load. Please follow our
-          <a href="https://github.com/DestinyItemManager/DIM/wiki/Troubleshooting"
+          <a href="https://guide.dim.gg/Troubleshooting"
             >Troubleshooting Guide</a
           >
           to find a solution, and contact us if those steps don't work.
@@ -97,7 +97,7 @@
     </div>
     <div id="temp-container"></div>
     <a
-      href="https://github.com/DestinyItemManager/DIM/wiki/Supported-Browsers"
+      href="https://guide.dim.gg/Supported-Browsers"
       id="browser-warning"
     >
     </a>
