--- a/src/return.html
+++ b/src/return.html
@@ -14,9 +14,7 @@
         </p>
         <p>
           Please follow our
-          <a href="https://github.com/DestinyItemManager/DIM/wiki/Troubleshooting"
-            >Troubleshooting Guide</a
-          >
+          <a href="https://guide.dim.gg/Troubleshooting">Troubleshooting Guide</a>
           to find a solution, and contact us if those steps don't work.
         </p>
 
